--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <span id="element"></span>
           <div class="button">
             <a href="RES2.html"><button class="btn">Download Resume</button></a>
-            <button class="btn">Visit Github</button>
+           <a href="https://github.com/mohithreddy24"><button class="btn">Visit Github</button></a>
           </div>
         </div>
 
